Made some progress, still have bugs